--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -197,3 +197,21 @@
     model: Tab V7
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 5.1; Plane 8.6 3G PS8086MG Build/LMY47I; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/90.0.4430.82 Safari/537.36 OPR/57.0.2254.58007
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 57.0.2254.58007
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Digma
+    model: Plane 8.6 3G
+  os_family: Android
+  browser_family: Opera
