--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -97,6 +97,8 @@ HTC:
       model: 'U12 Plus'
     - regex: 'U11 life(?:[);/ ]|$)'
       model: 'U11 Life'
+    - regex: '(?:U11 Eyes|2Q4R100)(?:[);/ ]|$)'
+      model: 'U11 Eyes'
     - regex: 'XV6975(?:[);/ ]|$)'
       model: 'Imagio'
     - regex: 'PG86100(?:[);/ ]|$)'
@@ -2864,7 +2866,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL2|8L)|C5L 2020)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL2|XL3 Plus|8L)|C5L 2020)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2959,8 +2961,8 @@ Blu:
       model: 'Vivo Selfie'
     - regex: '(?:BLU[_ ])?Vivo 5 Mini'
       model: 'Vivo 5 Mini'
-    - regex: '(?:BLU[_ ])?Vivo One Plus'
-      model: 'Vivo One Plus'
+    - regex: '(?:BLU[_ ])?Vivo (One|XL3) Plus'
+      model: 'Vivo $1 Plus'
     - regex: '(?:BLU[_ ])?Vivo (5R|XL2|8L)'
       model: 'Vivo $1'
 
@@ -9658,7 +9660,7 @@ Lenovo:
       model: 'K3 Note'
     - regex: 'K(1[30]) Note(?:[);/ ]|$)'
       model: 'K$1 Note'
-    - regex: 'A7010a48(?:[);/ ]|$)'
+    - regex: 'A7010(?:a48)?(?:[);/ ]|$)'
       model: 'K4 Note'
     - regex: 'K350t(?:[);/ ]|$)'
       model: 'K5'
@@ -11453,12 +11455,16 @@ Motorola:
       model: 'Moto E$1s'
     - regex: '(?:MOT-|Motorola-)?XT1030'
       model: 'Droid Mini'
+    - regex: '(?:MOT-|Motorola-)?XT1565'
+      model: 'Droid Maxx 2'
     - regex: '(?:MOT-|Motorola-)?XT1096'
       model: 'Moto X2'
     - regex: '(?:MOT-|Motorola-)?XT1254'
       model: 'Droid Turbo'
     - regex: '(?:MOT-|Motorola-)?XT10(?:28|3[1234]|68|69)'
       model: 'Moto G'
+    - regex: '(?:MOT-|Motorola-)?XT1609'
+      model: 'Moto G4 Play'
     - regex: '(?:MOT-|Motorola-)?XT1799-2'
       model: 'Moto G5s'
     - regex: '(?:MOT-|Motorola-)?XT180[3-5]|Moto G ?5S Plus'
@@ -11473,7 +11479,7 @@ Motorola:
       model: 'Moto G7 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:49|5[23568]|60|9[23457])'
       model: 'Moto X'
-    - regex: '(?:MOT-|Motorola-)?XT156[23]|Moto X Play(?:[);/ ]|$)'
+    - regex: '(?:MOT-|Motorola-)?XT156[234]|Moto X Play(?:[);/ ]|$)'
       model: 'Moto X Play'
     - regex: '(?:MOT-|Motorola-)?XT1572'
       model: 'Moto X Style'
@@ -12065,6 +12071,7 @@ Nomi:
       model: 'Ultra 3 Pro'
       device: 'tablet'
     - regex: '(?:Nomi_)?C070010'
+      device: 'tablet'
       model: 'Corsa'
     - regex: '(?:Nomi_)?C070020'
       model: 'Corsa Pro'
